--- a/index.html
+++ b/index.html
@@ -1,13 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="og:description"
+    content="Test your football knowledge and win big with the Tata Gluco Football Team AI Quiz Challenge! Play our interactive quiz, answer AI-generated questions, and aim for the highest score to win an exclusive Tata Gluco Football Team t-shirt. Get ready to show off your skills and support your favorite team in style!">
+  <meta name="og:title" content="Score Big with Tata Gluco Football Team: AI Quiz Challenge">
+  <meta name="og:keywords" content="HTML, CSS, JavaScript">
+  <meta name="og:author" content="HiVOCO  Team">
+  <meta property="og:image"
+    content="https://663d2fab125be03f6aa11ff1--sage-liger-682cea.netlify.app/assets/images/tata-gluco-logo.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+  <title>Tata Gluco</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
