--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 
   <title>Tata Gluco</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8DZF2L3PWZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-8DZF2L3PWZ');
+  </script>
 </head>
 
 <body>
