Add keyword in html file

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 
 <head>
+  <link rel="icon" type="image/x-icon" href="/images/tgp-logo.png">
   <meta charset="UTF-8">
   <meta name="og:description"
     content="Test your football knowledge and win big with the Tata Gluco Football Team AI Quiz Challenge! Play our interactive quiz, answer AI-generated questions, and aim for the highest score to win an exclusive Tata Gluco Football Team t-shirt. Get ready to show off your skills and support your favorite team in style!">
   <meta name="og:title" content="Score Big with Tata Gluco Football Team: AI Quiz Challenge">
-  <meta name="og:keywords" content="HTML, CSS, JavaScript">
+  <meta name="og:keywords"
+    content="football quiz, Tata Gluco Football Team, AI quiz challenge, interactive quiz, football knowledge, win t-shirt, exclusive merchandise, sports trivia, support football team, play quiz, AI-generated questions, high score, football fans, quiz competition, test football knowledge">
   <meta name="og:author" content="HiVOCO  Team">
-  <meta property="og:image"
-    content="https://663d2fab125be03f6aa11ff1--sage-liger-682cea.netlify.app/assets/images/tata-gluco-logo.png">
+  <meta property="og:image" content="/images/tgp-logo.png">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <title>Tata Gluco</title>
@@ -23,14 +24,14 @@
 
     gtag('config', 'G-8DZF2L3PWZ');
   </script>
-<script type='text/javascript'>
-  window.smartlook||(function(d) {
-    var o=smartlook=function(){ o.api.push(arguments)},h=d.getElementsByTagName('head')[0];
-    var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
-    c.charset='utf-8';c.src='https://web-sdk.smartlook.com/recorder.js';h.appendChild(c);
+  <script type='text/javascript'>
+    window.smartlook || (function (d) {
+      var o = smartlook = function () { o.api.push(arguments) }, h = d.getElementsByTagName('head')[0];
+      var c = d.createElement('script'); o.api = new Array(); c.async = true; c.type = 'text/javascript';
+      c.charset = 'utf-8'; c.src = 'https://web-sdk.smartlook.com/recorder.js'; h.appendChild(c);
     })(document);
     smartlook('init', 'af6c50b0bcd52b4a7f15adb9fdfd72537904b9bb', { region: 'eu' });
-</script>
+  </script>
 </head>
 
 <body>
